# bool-engine

./: .gitignore  expressions.py  main.py  pyproject.toml  readme.md  satsolver.py  setup.py  truthtables.py
outputs/: common.md
src/: backtrack_1.py  cnf_2sat.py  cnf_apt.py  cnf_ksat.py  cnf_sat.py  common.py  csp.py  dp_2sat.py  expressions.py  gates.py  implication_graph.py  pseudocode.md  sat.py  sat_2.py  sat_solver.py  satsolver.py  testing.py  transforms.py  truthtables.py
src/solver/: cnf_2sat.py  cnf_apt.py  cnf_ksat.py  dp_2sat.py
src/solvers/: cnf_2sat.py  cnf_apt.py  cnf_ksat.py  dp_2sat.py
src/structure/: implication_graph.py  ksat.py  truthtables.py
src/structures/: gates.py  implication_graph.py  ksat.py  parsers.py
src/tests/: tester.py
src/utils/: expressions.py  printouts.py  syntax.py  transforms.py  truthtables.py
